--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
     </div>
         <h2>OBJETIVO MENSUAL: Mejorar la conciencia del paso.</h2>
         <h2>FASE: Adquisición.</h2>
-        <!--<h2 id ="pageTitle"> PRÓXIMA CARRERA Desafío UTU: 2024/09/01 </h2> -->
+        <h2 id ="pageTitle"> PRÓXIMA CARRERA Merlo 60km: 2024/11/17 </h2> 
         <h2 id="result"></h2>
         <!--<p>Indicaciones previas:  </p>           -->
 
     <div class="sub-container">
-        <h4>SEMANA 19
-            <br>Objetivo semanal: Apretar en las bajadas. </br>
+        <h4>SEMANA 21
+            <br>Objetivo semanal: Apretar en las salidas. </br>
         </h4>
         <p>Entrada en calor </p>   
-        <p> 4 vueltas x 11 repeticiones </p>
+        <p> 4 vueltas x 12 repeticiones </p>
         <div class="image-container">  
             <video width="100%" class="responsive-video" style="margin-top: 35px;" controls>            
                 <source src="Video1.mp4" type="video/mp4">
@@ -46,48 +46,53 @@
         <div class="column-container 1">           
             <div class="column">            
                 <h3>Dia 1 
-                <br> Lunes: 12 km calle.</h3>
-                <p>  -3 km fuertes. </p>
-                <p>  -4 km, 600m fuertes x 300m suaves. </p>
-                <p>  -2 km, 300m fuertísimos x 400m suaves. </p>
-                <p>  -3 km de mayor a menor. </p>            
+                <br> Lunes: 15 km trail, Parque de Montaña.</h3>
+                <p> -3 km ágiles. </p>
+                <p> -4 km, 20" fuertes x 20" suaves. </p>
+                <p> -4 km buenas sensaciones. </p>
+                <p> -4 km sensaciones incómodas. </p>
             </div>
             <div class="column">            
                 <h3>Dia 2
-                <br> Martes mañana: 4 km calle, lo más fuerte posible. </h3> 
-                <h3> Martes tarde: 13 km trail Parque de Montaña.</h3>
-                <p>  -3 km ágiles. </p>
-                <p>  -5 km, 300m fuertes x 200m suaves, donde nos toque. </p>
-                <p>  -5 km buenas sensaciones x distintas subidas y bajas del Llorón. </p>
+                <br> Martes mañana: 5 km calle, mejor ritmo posible. </h3> 
+                <h3> Martes tarde: 15 km trail mixto, Caballitos + Parque de Montaña (entreno de salida).</h3>
+                <p> -2 km fuertes. </p>
+                <p> -2 km de mayor a menor. </p>
+                <p> -3 km suaves. </p>
+                <p> -6 km ágiles x Llorón subidas suaves bajadas fuertes. </p>
+                <p> -2 km de menor a mayor. </p>
             </div>
             <div class="column">      
                 <h3>Dia 3
-                <br> Jueves mañana: 6 km calle, al mejor ritmo posible. </h3> 
-                <h3> Jueves tarde: 13 km trail Arco.</h3>
-                <p>  -3 km suaves. </p>
-                <p>  -4 km, 20" ágiles x 20" fuertes. </p>
-                <p>  -4 km buenas sensaciones. </p>
-                <p>  -2 km bajas pulsaciones. </p>            
+                <br> Jueves mañana: 5 km calle, mejor tiempo posible, por Parque San Martín. </h3> 
+                <h3> Jueves tarde: 16 km trail, Parque de Montaña, pasadas.</h3>
+                <p> -3 km fuertes. </p>
+                <p> -6 km, 1000m ágiles x 300m suaves x senderos bajos. </p>
+                <p> -3 km, 200m fuertes x 100m suaves x Llorón. </p>
+                <p> -4 km buenas sensaciones. </p>
             </div>                
             <div class="column">
                 <h3>Dia 4
-                <br> Viernes: 20 km trail Aspero. </h3> 
-                <p>  -4 km de menor a mayor. </p>
-                <p>  -8 km subida 3' ágiles centrado en la cadencia, x 5' trekking exigido. </p>
-                <p>  -4 km ágiles en bajada. </p>
-                <p>  -4 km mejor ritmo posible. </p>            
+                <br> Viernes: 14 km trail Arco.</h3>
+                <p> -3 km fuertes. </p>
+                <p> -4 km, 3' subiendo fuerte x 1' bajando fuerte. </p>
+                <p> -4 km fuertes. </p>
+                <p> -3 km bajas pulsaciones. </p>
             </div> 
             <div class="column">
                 <h3>Dia 5
-                <br> Sábado: 23 km trail Arco  1700+.</h3>
-                <p>  -4 km de menor a mayor. </p>
-                <p>  -19 km buenas sensaciones. </p>
+                <br> Sábado: 34 km trail, zona del Arco (Mati -Gabi).</h3>
+                <p> -3 km fuertes. </p>
+                <p> -12 km, 6km de menor a mayor x 6km al mejor ritmo posible. </p>
+                <p> -3 km, 40" suaves x 40" fuertes. </p>
+                <p> -4 km, 4' a topee x 4' buenas sensaciones. </p>
+                <p> -12 km completamos con sensaciones incómodas. </p>
             </div> 
         </div>
 
         <div class="small-paragraph-container">
             <p> Método de recuperación </p>
-            <p> - Masaje de tensores de la fascia (3' x pierna). </p>     
+            <p> - Movilidad aductor rana (3 series x 30"). </p>     
         </div>
 
         <div class="image-container">  
@@ -103,8 +108,8 @@
     
         
     <div class="sub-container">
-        <h4>SEMANA 20
-        <br>Objetivo semanal: Sostener ritmos fuertes en las transiciones. </br>
+        <h4>SEMANA 22
+        <br>Objetivo semanal: Trabajar en sensaciones incómodas. </br>
             </h4>   
         <p>Entrada en calor </p>   
         <p> 4 vueltas x 13 repeticiones </p>            
@@ -124,49 +129,54 @@
         <div class="column-container 1">           
             <div class="column">
                 <h3>Dia 1
-                <br> Lunes: 11 km trail, Parque de Montaña, series triangulares x frente.</h3>
-                <p>  -3 km ágiles. </p>
-                <p>  -2 km, 10 series x 200m subiendo x 30" pausa pasiva. </p>
-                <p>  -2 km, 10 series x 200m bajando x 1' pausa pasiva. </p>
-                <p>  -4 km sensaciones incómodas. </p>            
+                <br> Lunes: 13 km calle.</h3>
+                <p> -2 km menor a mayor. </p>
+                <p> -3 km, 2' fuertes x 4' suaves x 1' ágil. </p>
+                <p> -3 km, 4' suaves x 2' fuertisímooos. </p>
+                <p> -2 km, 1' fuerte x 4' ágiles. </p>
+                <p> -3 km buenas sensaciones. </p>
             </div>
             <div class="column">
                 <h3>Dia 2 
-                <br> Martes: 15 km calle planos.</h3>
-                <p>  -3 km de menor a mayor. </p>
-                <p>  -12 km mejor tiempo posible. </p>
+                <br> Martes mañana: 5 km calle, en el mejor tiempo posible.</h3>
+                <h3> Martes tarde: 17 km trail, Parque de Montaña. </h3>
+                <p> -6 km fuertes. </p>
+                <p> -6 km, 45" ágiles x 45" suaves. </p>
+                <p> -3 km de menor a mayor. </p>
+                <p> -2 km bajas pulsaciones. </p>
             </div>
             <div class="column">
                 <h3>Dia 3
-                <br> Jueves mañana: 5 km calle mejor tiempo posible, por Parque San Martín. </h3> 
-                <h3> Jueves tarde: 12 km trail, Parque de Montaña series triangulares x frente.</h3>
-                <p>  -3 km ágiles. </p>
-                <p>  -2 km, 6 series x 300m subiendo x 35" pausa pasiva. </p>
-                <p>  -2 km, 6 series x 300m bajando x 40" pausa pasiva. </p>
-                <p>  -5 km buenas sensaciones. </p>            
+                <br> Jueves: 13 km trail Arco. </h3> 
+                <p> -2 km fuertes. </p>
+                <p> -3 km a ritmo incómodo. </p>
+                <p> -3 km, 20" fuertes x 20" suaves. </p>
+                <p> -3 km bajas pulsaciones. </p>
+                <p> -2 km fuertes. </p>
             </div>
             <div class="column">
                 <h3>Dia 4
-                <br> Viernes: 17 km trail Arco.</h3>
-                <p>  -3 km ágiles, calle en bajada. </p>
-                <p>  -3 km, 40" fuertes x 40" suaves por calle subiendo. </p>
-                <p>  -8 km mejor tiempo posible, Arco. </p>
-                <p>  -3 km fuertes. </p>            
+                <br> Viernes: 14 km trail, Parque de Montaña, pasadas.</h3>
+                <p> -2 km ágiles. </p>
+                <p> -6 km, 2000m fuertes x 500m suaves, senderos bajos. </p>
+                <p> -2 km buenas sensaciones. </p>
+                <p> -4 km, 600m fuertes x 100m suaves x Llorón. </p>
+                <p> -2 km suaves. </p>
             </div> 
             <div class="column">
                 <h3>Dia 5
-                <br> Sábado: 29 km zona del Arco 1900+.</h3>
-                <p>  -4 km de menor a mayor. </p>
-                <p>  -3 km, 30" ágiles x 30" suaves. </p>
-                <p>  -4 km trekking exigido pasos fuertes. </p>
-                <p>  -3 km trabajamos técnica de cadencia firme en subida. </p>
-                <p>  -15 km completamos con sensaciones incómodas. </p>
+                <br> Sábado: 25 km Arco, Santo Tomás, bajada Caño (Mati-Gabi).</h3>
+                <p> -2 km fuertes. </p>
+                <p> -5 km ágiles. </p>
+                <p> -4 km, 25" fuertes x 25" suaves. </p>
+                <p> -4 km fuertes. </p>
+                <p> -10 km buenas sensaciones, por río seco. </p>
             </div> 
         </div>
 
         <div class="small-paragraph-container">
             <p> Método de recuperación </p>
-            <p>  - Movilidad de aductor rana (3 series x 30"). </p>
+            <p> - Movilidad aductor rana (3 series x 30"). </p>     
         </div>
 
         <div class="image-container">  
